# sparsa_pioneer_program

code/Week02/lecture/: Gift.hs
purple-book/: Week2.md
purple-book/Chapter 14/: Addition.cabal  Addition.hs
purple-book/Chapter 14/Addition/: flake.nix
purple-book/Typeclassopedia/: Applicative.hs  Arbitrary.hs  Foldables.hs  Functors.hs  Monads.hs  Semigroup_Monoid.hs  Traversable.hs  Week2.hs
purple-book/chapter12/: Kinds.hs  MaybeLib.hs  Natural.hs  mkPerson.hs  mkWord.hs  replaceThe.hs
