name: addition
version: 0.1.0.0
license-file: LICENSE 
author: sparsa
maintainer: sparsa@mlabs.city
category: Text
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules: Addition
    ghc-options: -Wall -fwarn-tabs
    build-depends: hspec
    hs-source-dirs: .
    default-language: Haskell2010

